:zap: update to java 25