@@ -1,22 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
          http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.anode.maven.wagon</groupId>
-    <artifactId>wagon-b2</artifactId>
-    <version>1.0.0</version>
+    <groupId>com.anode.maven</groupId>
+    <artifactId>b2-maven-extension</artifactId>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Maven Wagon for Backblaze B2</name>
-    <description>Java 8 compile Maven Wagon implementation for Backblaze B2 Cloud Storage</description>
+    <name>B2 Maven Extension</name>
+    <description>A Maven extension which provides support for Backblaze B2, instead of an artifact repository</description>
+    <url>https://github.com/A-N-O-D-E-R/B2Wagon</url>
+
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
+    <scm>
+        <connection>scm:git:git://github.com/A-N-O-D-E-R/B2Wagon.git</connection>
+        <developerConnection>scm:git:git://github.com/A-N-O-D-E-R/B2Wagon.git</developerConnection>
+        <url>https://github.com/A-N-O-D-E-R/B2Wagon</url>
+        <tag>HEAD</tag>
+    </scm>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
+        <maven.compiler.source>25</maven.compiler.source>
+        <maven.compiler.target>25</maven.compiler.target>
         <wagon.version>3.5.3</wagon.version>
         <b2.sdk.version>6.2.0</b2.sdk.version>
     </properties>
@@ -29,14 +44,6 @@
             <version>${wagon.version}</version>
             <scope>provided</scope>
         </dependency>
-
-        <!-- Plexus Component Annotations -->
-        <dependency>
-            <groupId>org.codehaus.plexus</groupId>
-            <artifactId>plexus-component-annotations</artifactId>
-            <version>2.2.0</version>
-        </dependency>
-
 
         <!-- Backblaze B2 SDK -->
         <dependency>
@@ -69,7 +76,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>5.7.0</version>
+            <version>5.14.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -94,10 +101,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <source>25</source>
+                    <target>25</target>
+                    <release>25</release>
                 </configuration>
             </plugin>
 
@@ -105,7 +112,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.5.1</version>
+                <version>3.6.1</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -118,20 +125,25 @@
                                 <includes>
                                     <include>com.backblaze.b2:*</include>
                                     <include>org.apache.httpcomponents:*</include>
+                                    <include>org.apache.httpcomponents.client5:*</include>
+                                    <include>org.apache.httpcomponents.core5:*</include>
                                     <include>commons-logging:*</include>
                                     <include>commons-codec:*</include>
                                     <include>com.google.code.gson:*</include>
                                 </includes>
                             </artifactSet>
                             <relocations>
-                                <!-- Relocate to avoid conflicts -->
                                 <relocation>
                                     <pattern>com.google.gson</pattern>
-                                    <shadedPattern>com.example.maven.wagon.b2.shaded.gson</shadedPattern>
+                                    <shadedPattern>com.anode.maven.b2.shaded.gson</shadedPattern>
                                 </relocation>
                                 <relocation>
                                     <pattern>org.apache.http</pattern>
-                                    <shadedPattern>com.example.maven.wagon.b2.shaded.http</shadedPattern>
+                                    <shadedPattern>com.anode.maven.b2.shaded.http</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>org.apache.hc</pattern>
+                                    <shadedPattern>com.anode.maven.b2.shaded.hc</shadedPattern>
                                 </relocation>
                             </relocations>
                         </configuration>
@@ -139,18 +151,14 @@
                 </executions>
             </plugin>
 
-            <!-- Plexus Component Metadata -->
+            <!-- Surefire Plugin -->
             <plugin>
-                <groupId>org.codehaus.plexus</groupId>
-                <artifactId>plexus-component-metadata</artifactId>
-                <version>2.2.0</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>generate-metadata</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.5.2</version>
+                <configuration>
+                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+                </configuration>
             </plugin>
 
             <!-- Source Plugin -->
@@ -182,16 +190,19 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <source>8</source>
+                    <source>25</source>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>3.0.1</version>
+                <configuration>
+                    <tagNameFormat>v@{project.version}</tagNameFormat>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
                 </configuration>
             </plugin>
         </plugins>
-        <extensions>
-            <extension>
-                <groupId>com.anode.maven.wagon</groupId>
-                <artifactId>wagon-b2</artifactId>
-                <version>1.0.0</version>
-            </extension>
-        </extensions>
     </build>
 </project>
